Commit da Etapa 03
 Branch Etapa 03 - MVC da Funcionalidade Listagem de Itens e AreaMatch - implementação da interface e lógica funcional.

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -7,6 +7,7 @@
     <title>Login - Liberty Hive</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <script src="login.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
 <body>
     <header class="header">
