--- a/src/main/resources/static/cadastro.html
+++ b/src/main/resources/static/cadastro.html
@@ -7,6 +7,7 @@
     <title>Cadastro - Liberty Hive</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <script src="cadastro.js" defer></script>
+     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
 <header>
