--- a/src/main/resources/static/meusItens.html
+++ b/src/main/resources/static/meusItens.html
@@ -7,20 +7,39 @@
   <link rel="icon" type="image/png" href="favicon.png">
   <link rel="stylesheet" href="./Style/styleMeusItens.css">
   <script src="meusItens.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
-  <header class="top-bar">
-    <div class="logo">
-      <img src="./imagens/logo.png" alt="Logo"> <!-- Logo ful left Side askdaskj-->
-    </div>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
-    <div class="Perfil-Config">
-      <img src="./imagens/perfilIcone.png" alt="Usuário" onclick="abrirPerfil()" style="cursor:pointer;">
-      <img src="./imagens/engrenagemConfig.png" alt="Configurações" onclick="abrirConfiguracoes()"
-        style="cursor:pointer;">
+<header class="navbar navbar-expand-lg bg-warning shadow-sm px-3">
+  <div class="container-fluid">
+    <a class="navbar-brand fw-bold" href="inicio.html">
+      <img src="imagens/logo.png" alt="LibertyHive" width="40">
+    </a>
+
+    <div class="d-flex align-items-center gap-3 ms-auto">
+      <button class="btn btn-outline-dark btn-sm rounded-circle" title="Notificações">
+        <i class="bi bi-bell"></i>
+      </button>
+      <a href="favoritos.html" class="btn btn-outline-danger btn-sm rounded-circle" title="Meus Favoritos">
+        <i class="bi bi-heart"></i>
+      </a>
+      <button class="btn btn-outline-dark btn-sm rounded-circle" title="Perfil" onclick="abrirPerfil()">
+        <i class="bi bi-person"></i>
+      </button>
+      <button class="btn btn-outline-dark btn-sm rounded-circle" title="Configurações" onclick="abrirConfiguracoes()">
+        <i class="bi bi-gear"></i>
+      </button>
+      <button class="btn btn-outline-dark btn-sm rounded-circle" title="Sair" onclick="logout()">
+        <i class="bi bi-box-arrow-right"></i>
+      </button>
     </div>
-  </header>
+  </div>
+</header>
+
 
   <!-- Voltar -->
   <div class="back">
@@ -42,8 +61,6 @@
       <div class="modal-content">
 
         <span class="fechar" onclick="fecharFormulario()">&times;</span>
-
-
         <!-- Formulário para preenchimento meus itens -->
         <form id="formAdicionar">
           <h2>Vamos lá!</h2>
@@ -60,7 +77,7 @@
             <input type="radio" id="tipoServico" name="tipoItem" value="Serviço" />
           </div>
           <br><br>
-          <label>Este item é uma doação?</label>
+          <label>É doação/voluntário?</label>
           <br><br>
           <div class="radio-group">
             <label for="doacaoSim">Sim</label>
@@ -72,23 +89,16 @@
             <input type="radio" id="doacaoNao" name="isDoacao" value="0" checked />
           </div>
           <br><br>
-
-          <!-- Lista de Categorias -->
           <label for="categoria">Escolha a categoria do seu novo item:</label>
 
           <select id="categoria" name="categoria">
-            <optgroup label="Tecnologia">
+            <optgroup label="Seção: Tecnologia">
               <option>Tecnologia</option>
-            </optgroup>
-
-            <optgroup label="Celulares e Smartphones">
               <option>Celulares e Smartphones</option>
               <option>Acessórios para Celulares (Capas, Películas, Carregadores)</option>
               <option>Peças para Celulares</option>
               <option>Smartwatches e Pulseiras</option>
-            </optgroup>
-
-            <optgroup label="Informática">
+              <option>Informática</option>
               <option>Notebooks e Laptops</option>
               <option>Computadores de Mesa (Desktops)</option>
               <option>Componentes e Peças (Processadores, Placas de Vídeo, Memórias RAM)</option>
@@ -98,15 +108,11 @@
               <option>Acessórios para PC (Teclados, Mouses, Webcams)</option>
               <option>Redes e Wi-Fi (Roteadores, Repetidores)</option>
               <option>PC Gamer</option>
-            </optgroup>
-
-            <optgroup label="Videogames">
+              <option>Videogames</option>
               <option>Consoles (PlayStation, Xbox, Nintendo)</option>
               <option>Jogos Físicos e Digitais</option>
               <option>Acessórios para Consoles (Controles, Headsets)</option>
-            </optgroup>
-
-            <optgroup label="Eletrônicos, Áudio e Vídeo">
+              <option>Eletrônicos, Áudio e Vídeo</option>
               <option>TVs e Smart TVs</option>
               <option>Equipamentos de Áudio (Home Theaters, Soundbars, Caixas de Som)</option>
               <option>Fones de Ouvido</option>
@@ -114,7 +120,8 @@
               <option>Projetores e Telas</option>
             </optgroup>
 
-            <optgroup label="Casa, Móveis e Decoração">
+            <optgroup label="Seção: Casa e Eletrodomésticos">
+              <option>Casa, Móveis e Decoração</option>
               <option>Móveis</option>
               <option>Móveis para Quarto (Camas, Guarda-Roupas, Cômodas)</option>
               <option>Móveis para Sala de Estar (Sofás, Racks, Estantes)</option>
@@ -125,42 +132,31 @@
               <option>Quadros, Vasos e Enfeites</option>
               <option>Tapetes</option>
               <option>Iluminação (Lustres, Luminárias, Lâmpadas)</option>
-            </optgroup>
-
-            <optgroup label="Cama, Mesa e Banho">
+              <option>Cama, Mesa e Banho</option>
               <option>Roupas de Cama</option>
               <option>Toalhas de Banho e Rosto</option>
               <option>Toalhas de Mesa e Acessórios</option>
-            </optgroup>
-
-            <optgroup label="Utilidades Domésticas">
+              <option>Utilidades Domésticas</option>
               <option>Utensílios de Cozinha (Panelas, Talheres, Potes)</option>
               <option>Organização da Casa (Caixas, Prateleiras, Cabides)</option>
               <option>Limpeza da Casa</option>
-            </optgroup>
-
-            <optgroup label="Jardim e Área Externa">
+              <option>Jardim e Área Externa</option>
               <option>Móveis de Jardim</option>
               <option>Ferramentas de Jardinagem</option>
               <option>Churrasqueiras e Acessórios</option>
               <option>Piscinas e Acessórios</option>
-            </optgroup>
-
-            <optgroup label="Eletrodomésticos">
+              <option>Eletrodomésticos</option>
+              <option>Cozinha</option>
               <option>Geladeiras e Freezers</option>
               <option>Fogões, Fornos e Cooktops</option>
               <option>Micro-ondas</option>
               <option>Lava-louças</option>
-            </optgroup>
-
-            <optgroup label="Pequenos Eletrodomésticos">
+              <option>Pequenos Eletrodomésticos</option>
               <option>Cafeteiras</option>
               <option>Liquidificadores e Batedeiras</option>
               <option>Fritadeiras Elétricas (Air Fryer)</option>
               <option>Sanduicheiras e Grills</option>
-            </optgroup>
-
-            <optgroup label="Climatização e Cuidados com a Casa">
+              <option>Climatização e Cuidados com a Casa</option>
               <option>Ar Condicionado e Climatizadores</option>
               <option>Ventiladores e Circuladores de Ar</option>
               <option>Aspiradores de Pó e Robôs</option>
@@ -168,36 +164,45 @@
               <option>Ferros de Passar</option>
             </optgroup>
 
-            <optgroup label="Moda e Acessórios">
+            <optgroup label="Seção: Moda, Beleza e Esportes">
+              <option>Moda e Acessórios</option>
+              <option>Roupas</option>
               <option>Roupas Femininas (Vestidos, Blusas, Calças)</option>
               <option>Roupas Masculinas (Camisetas, Camisas, Bermudas)</option>
               <option>Moda Íntima e Lingerie</option>
               <option>Moda Praia</option>
-              <option>Calçados (Tênis, Sapatos, Sandálias, Botas)</option>
-              <option>Bolsas, Mochilas e Malas</option>
+              <option>Calçados</option>
+              <option>Tênis</option>
+              <option>Sapatos Sociais e Casuais</option>
+              <option>Sandálias e Chinelos</option>
+              <option>Botas</option>
+              <option>Bolsas e Malas</option>
+              <option>Bolsas Femininas</option>
+              <option>Mochilas</option>
+              <option>Malas de Viagem</option>
+              <option>Acessórios</option>
               <option>Joias e Bijuterias</option>
               <option>Relógios</option>
               <option>Óculos de Sol e de Grau</option>
               <option>Cintos, Chapéus e Bonés</option>
-            </optgroup>
-
-            <optgroup label="Beleza e Cuidado Pessoal">
+              <option>Beleza e Cuidado Pessoal</option>
+              <option>Perfumes</option>
               <option>Perfumes Femininos</option>
               <option>Perfumes Masculinos</option>
               <option>Maquiagem</option>
               <option>Rosto (Base, Corretivo, Pó)</option>
               <option>Olhos (Máscara de Cílios, Sombra, Delineador)</option>
               <option>Lábios (Batom, Gloss)</option>
-              <option>Cuidados com a Pele</option>
+              <option>Cuidados com a Pele (Skincare)</option>
+              <option>Limpeza de Pele</option>
               <option>Hidratantes Faciais e Corporais</option>
               <option>Protetores Solares</option>
+              <option>Cuidados com o Cabelo</option>
               <option>Shampoos e Condicionadores</option>
               <option>Tratamentos Capilares</option>
               <option>Modeladores e Finalizadores</option>
               <option>Barbearia e Cuidados Masculinos</option>
-            </optgroup>
-
-            <optgroup label="Esportes e Fitness">
+              <option>Esportes e Fitness</option>
               <option>Roupas e Calçados Esportivos</option>
               <option>Equipamentos de Academia e Musculação</option>
               <option>Suplementos Alimentares e Vitaminas</option>
@@ -209,19 +214,20 @@
               <option>Esportes Aquáticos</option>
             </optgroup>
 
-            <optgroup label="Brinquedos e Hobbies">
+            <optgroup label="Seção: Hobbies e Veículos">
+              <option>Brinquedos e Hobbies</option>
+              <option>Brinquedos</option>
               <option>Bonecos e Bonecas</option>
               <option>Jogos de Tabuleiro e Cartas</option>
               <option>Blocos de Montar e Construção</option>
               <option>Veículos de Brinquedo</option>
               <option>Brinquedos para Bebês</option>
+              <option>Hobbies</option>
               <option>Instrumentos Musicais</option>
               <option>Modelismo e Miniaturas</option>
               <option>Arte e Papelaria</option>
               <option>Colecionáveis (Figurinhas, Moedas, Selos)</option>
-            </optgroup>
-
-            <optgroup label="Veículos, Peças e Acessórios">
+              <option>Veículos, Peças e Acessórios</option>
               <option>Carros e Caminhonetes</option>
               <option>Motos</option>
               <option>Peças para Veículos</option>
@@ -235,23 +241,20 @@
               <option>Náutica (Barcos, Lanchas, Jet Skis)</option>
             </optgroup>
 
-            <optgroup label="Cultura e Entretenimento">
+            <optgroup label="Seção: Cultura, Serviços e Imóveis">
+              <option>Cultura e Entretenimento</option>
               <option>Livros, Revistas e HQs</option>
               <option>Filmes e Séries (DVDs, Blu-ray)</option>
               <option>Música (CDs, Discos de Vinil)</option>
               <option>Antiguidades e Peças de Coleção</option>
-            </optgroup>
-
-            <optgroup label="Serviços">
+              <option>Serviços</option>
               <option>Serviços Técnicos (Informática, Conserto de Eletrodomésticos)</option>
               <option>Aulas e Cursos (Idiomas, Música, Reforço Escolar)</option>
               <option>Consultoria (Negócios, Marketing, Jurídica)</option>
               <option>Design e Multimídia (Criação de Logos, Edição de Vídeo)</option>
               <option>Eventos e Festas (Fotografia, Buffet, Decoração)</option>
               <option>Reforma e Construção</option>
-            </optgroup>
-
-            <optgroup label="Imóveis">
+              <option>Imóveis</option>
               <option>Venda - Apartamentos</option>
               <option>Venda - Casas e Sobrados</option>
               <option>Venda - Terrenos e Lotes</option>
@@ -260,7 +263,7 @@
               <option>Imóveis Comerciais</option>
             </optgroup>
 
-            <optgroup label="Outra Categoria">
+            <optgroup label="Outras Categorias">
               <option>Outra Categoria</option>
             </optgroup>
           </select>
@@ -357,12 +360,13 @@
     </div>
     <br><br>
     <br><br>
-
+  </div>
+  
     <footer class="footer">
       <div class="footer-top">
+
         <div class="footer-section">
           <h3>Sobre</h3>
-          <p>LibertyHive</p>
           <p>Plataforma para trocar produtos e serviços de forma segura e prática.</p>
         </div>
 
@@ -380,26 +384,23 @@
         <div class="footer-section">
           <h3>Redes Sociais</h3>
           <div class="social-icons">
-            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" title="Facebook">
-              <img src="./imagens/facebook.png" alt="Facebook">
-            </a>
-            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" title="Instagram">
-              <img src="./imagens/instagram.png" alt="Instagram">
-            </a>
-            <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" title="Twitter">
-              <img src="./imagens/twitter.png" alt="Twitter">
-            </a>
-            <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" title="LinkedIn">
-              <img src="./imagens/linkedin.png" alt="LinkedIn">
-            </a>
+            <a href="#"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg"
+                alt="Facebook"></a>
+            <a href="#"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/twitter.svg"
+                alt="Twitter"></a>
+            <a href="#"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg"
+                alt="Instagram"></a>
+            <a href="#"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg"
+                alt="LinkedIn"></a>
           </div>
         </div>
       </div>
 
       <div class="footer-bottom">
-        <p>&copy; 2025 LibertyHive. Todos os direitos reservados.</p>
+        © 2025 LibertyHive. Todos os direitos reservados.
       </div>
     </footer>
+
 </body>
 
 </html>
