--- a/src/main/resources/static/favoritos.html
+++ b/src/main/resources/static/favoritos.html
@@ -20,17 +20,8 @@
                 <img src="imagens/logo.png" alt="LibertyHive" width="40">
             </a>
             <div class="d-flex align-items-center gap-3 ms-auto">
-                <button class="btn btn-outline-dark btn-sm rounded-circle" title="Notificações">
-                    <i class="bi bi-bell"></i>
-                </button>
-                <a href="favoritos.html" class="btn btn-outline-danger btn-sm rounded-circle" title="Meus Favoritos">
-                    <i class="bi bi-heart"></i>
-                </a>
-                <button class="btn btn-outline-dark btn-sm rounded-circle" title="Perfil" onclick="abrirPerfil()">
-                    <i class="bi bi-person"></i>
-                </button>
                 <button class="btn btn-outline-dark btn-sm rounded-circle" title="Configurações"
-                    onclick="abrirConfiguracoes()">
+                    onclick="window.location.href='configuracao.html'">
                     <i class="bi bi-gear"></i>
                 </button>
                 <button class="btn btn-outline-dark btn-sm rounded-circle" title="Sair" onclick="logout()">
