--- a/src/main/resources/static/meusItens.html
+++ b/src/main/resources/static/meusItens.html
@@ -11,34 +11,30 @@
 </head>
 
 <body>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
-<header class="navbar navbar-expand-lg bg-warning shadow-sm px-3">
-  <div class="container-fluid">
-    <a class="navbar-brand fw-bold" href="inicio.html">
-      <img src="imagens/logo.png" alt="LibertyHive" width="40">
-    </a>
-
-    <div class="d-flex align-items-center gap-3 ms-auto">
-      <button class="btn btn-outline-dark btn-sm rounded-circle" title="Notificações">
-        <i class="bi bi-bell"></i>
-      </button>
-      <a href="favoritos.html" class="btn btn-outline-danger btn-sm rounded-circle" title="Meus Favoritos">
-        <i class="bi bi-heart"></i>
+  <header class="navbar navbar-expand-lg bg-warning shadow-sm px-3">
+    <div class="container-fluid">
+      <a class="navbar-brand fw-bold" href="inicio.html">
+        <img src="imagens/logo.png" alt="LibertyHive" width="40">
       </a>
-      <button class="btn btn-outline-dark btn-sm rounded-circle" title="Perfil" onclick="abrirPerfil()">
-        <i class="bi bi-person"></i>
-      </button>
-      <button class="btn btn-outline-dark btn-sm rounded-circle" title="Configurações" onclick="abrirConfiguracoes()">
-        <i class="bi bi-gear"></i>
-      </button>
-      <button class="btn btn-outline-dark btn-sm rounded-circle" title="Sair" onclick="logout()">
-        <i class="bi bi-box-arrow-right"></i>
-      </button>
+
+      <div class="d-flex align-items-center gap-3 ms-auto">
+        <a href="favoritos.html" class="btn btn-outline-danger btn-sm rounded-circle" title="Meus Favoritos">
+          <i class="bi bi-heart"></i>
+        </a>
+        <button class="btn btn-outline-dark btn-sm rounded-circle" title="Configurações"
+          onclick="window.location.href='configuracao.html'">
+          <i class="bi bi-gear"></i>
+        </button>
+
+        <button class="btn btn-outline-dark btn-sm rounded-circle" title="Sair" onclick="logout()">
+          <i class="bi bi-box-arrow-right"></i>
+        </button>
+      </div>
     </div>
-  </div>
-</header>
+  </header>
 
 
   <!-- Voltar -->
@@ -361,45 +357,45 @@
     <br><br>
     <br><br>
   </div>
-  
-    <footer class="footer">
-      <div class="footer-top">
 
-        <div class="footer-section">
-          <h3>Sobre</h3>
-          <p>Plataforma para trocar produtos e serviços de forma segura e prática.</p>
-        </div>
+  <footer class="footer">
+    <div class="footer-top">
 
-        <div class="footer-section">
-          <h3>Links Úteis</h3>
-          <ul>
-            <li><a href="#">Fale Conosco</a></li>
-            <li><a href="#">Suporte</a></li>
-            <li><a href="#">Denúncias</a></li>
-            <li><a href="#">Termos de Uso</a></li>
-            <li><a href="#">Política de Privacidade</a></li>
-          </ul>
-        </div>
-
-        <div class="footer-section">
-          <h3>Redes Sociais</h3>
-          <div class="social-icons">
-            <a href="#"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg"
-                alt="Facebook"></a>
-            <a href="#"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/twitter.svg"
-                alt="Twitter"></a>
-            <a href="#"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg"
-                alt="Instagram"></a>
-            <a href="#"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg"
-                alt="LinkedIn"></a>
-          </div>
-        </div>
+      <div class="footer-section">
+        <h3>Sobre</h3>
+        <p>Plataforma para trocar produtos e serviços de forma segura e prática.</p>
       </div>
 
-      <div class="footer-bottom">
-        © 2025 LibertyHive. Todos os direitos reservados.
+      <div class="footer-section">
+        <h3>Links Úteis</h3>
+        <ul>
+          <li><a href="#">Fale Conosco</a></li>
+          <li><a href="#">Suporte</a></li>
+          <li><a href="#">Denúncias</a></li>
+          <li><a href="#">Termos de Uso</a></li>
+          <li><a href="#">Política de Privacidade</a></li>
+        </ul>
       </div>
-    </footer>
+
+      <div class="footer-section">
+        <h3>Redes Sociais</h3>
+        <div class="social-icons">
+          <a href="#"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg"
+              alt="Facebook"></a>
+          <a href="#"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/twitter.svg"
+              alt="Twitter"></a>
+          <a href="#"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg"
+              alt="Instagram"></a>
+          <a href="#"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg"
+              alt="LinkedIn"></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      © 2025 LibertyHive. Todos os direitos reservados.
+    </div>
+  </footer>
 
 </body>
 
