--- a/src/main/resources/static/configuracao.html
+++ b/src/main/resources/static/configuracao.html
@@ -45,50 +45,58 @@
 
             <div class="col-lg-6">
                 <div id="painelEditarPerfil" class="painel">
-                    <h3 class="mb-3">Editar Perfil</h3>
-                    <form id="formPerfil">
-                        <div class="mb-2">
-                            <label class="form-label">Nome Real</label>
-                            <input type="text" id="editNomeReal" class="form-control">
+                    <div class="card shadow-sm">
+                        <div class="card-body">
+                            <h2 class="card-title h4 border-bottom pb-2 mb-3">Editar Perfil</h2>
+                            <form id="formPerfil">
+                                <div class="mb-2">
+                                    <label class="form-label">Nome Real</label>
+                                    <input type="text" id="editNomeReal" class="form-control">
+                                </div>
+                                <div class="mb-2">
+                                    <label class="form-label">Contato</label>
+                                    <input type="text" id="editContato" class="form-control">
+                                </div>
+                                <div class="mb-2">
+                                    <label class="form-label">Endereço</label>
+                                    <input type="text" id="editEndereco" class="form-control">
+                                </div>
+                                <div class="mb-2">
+                                    <label class="form-label">CPF</label>
+                                    <input type="text" id="editCpf" class="form-control">
+                                </div>
+                                <div class="mb-2">
+                                    <label class="form-label">Data de Nascimento</label>
+                                    <input type="date" id="editDataNasc" class="form-control">
+                                </div>
+                                <button type="button" id="salvarPerfil" class="btn btn-success mt-2">Salvar Perfil</button>
+                            </form>
                         </div>
-                        <div class="mb-2">
-                            <label class="form-label">Contato</label>
-                            <input type="text" id="editContato" class="form-control">
-                        </div>
-                        <div class="mb-2">
-                            <label class="form-label">Endereço</label>
-                            <input type="text" id="editEndereco" class="form-control">
-                        </div>
-                        <div class="mb-2">
-                            <label class="form-label">CPF</label>
-                            <input type="text" id="editCpf" class="form-control">
-                        </div>
-                        <div class="mb-2">
-                            <label class="form-label">Data de Nascimento</label>
-                            <input type="date" id="editDataNasc" class="form-control">
-                        </div>
-                        <button type="button" id="salvarPerfil" class="btn btn-success mt-2">Salvar Perfil</button>
-                    </form>
+                    </div>
                 </div>
 
                 <div id="painelConta" class="painel" style="display:none;">
-                    <h3 class="mb-3">Configurações da Conta</h3>
-                    <form id="formConta">
-                        <div class="mb-2">
-                            <label class="form-label">Email</label>
-                            <input type="email" id="contaEmail" class="form-control">
+                     <div class="card shadow-sm">
+                        <div class="card-body">
+                            <h2 class="card-title h4 border-bottom pb-2 mb-3">Configurações da Conta</h2>
+                            <form id="formConta">
+                                <div class="mb-2">
+                                    <label class="form-label">Email</label>
+                                    <input type="email" id="contaEmail" class="form-control">
+                                </div>
+                                <div class="mb-2">
+                                    <label class="form-label">Username</label>
+                                    <input type="text" id="contaUserNome" class="form-control">
+                                </div>
+                                <div class="mb-2">
+                                    <label class="form-label">Nova Senha</label>
+                                    <input type="password" id="contaSenha" class="form-control">
+                                    <div class="form-text">Deixe em branco para não alterar.</div>
+                                </div>
+                                <button type="button" id="salvarConta" class="btn btn-success mt-2">Salvar Conta</button>
+                            </form>
                         </div>
-                        <div class="mb-2">
-                            <label class="form-label">Username</label>
-                            <input type="text" id="contaUserNome" class="form-control">
-                        </div>
-                        <div class="mb-2">
-                            <label class="form-label">Nova Senha</label>
-                            <input type="password" id="contaSenha" class="form-control">
-                            <div class="form-text">Deixe em branco para não alterar.</div>
-                        </div>
-                        <button type="button" id="salvarConta" class="btn btn-success mt-2">Salvar Conta</button>
-                    </form>
+                    </div>
                 </div>
 
                 <div id="painelMinhasPropostas" class="painel" style="display:none;">
@@ -96,29 +104,35 @@
                     <p class="text-muted">Acesse a página de propostas para ver mais detalhes.</p>
                 </div>
 
-                <div id="painelMinhaAvaliacao" class="painel" style="display:none;">
-                    <h3>Minha Avaliação</h3>
-                    <p class="text-muted">Conteúdo da sua avaliação e histórico.</p>
+                <div id="painelMinhaAvaliacao" class="painel" style="display: none;">
+                    <div class="card shadow-sm">
+                        <div class="card-body">
+                            <h2 class="card-title h4 border-bottom pb-2 mb-3">Minha Reputação</h2>
+                            
+                            <div id="minhaAvaliacaoContainer" class="d-flex justify-content-center align-items-center" style="min-height: 150px;">
+                                </div>
+
+                        </div>
+                    </div>
                 </div>
 
                 <div id="painelNotificacoes" class="painel" style="display:none;">
-                    <h3>Notificações por E-mail</h3>
-                    <p class="text-muted">Controle se você deseja receber e-mails sobre novas propostas e atualizações.
-                    </p>
-                    <form id="formNotificacoes">
-                        <div class="form-check form-switch fs-5">
-                            <input class="form-check-input" type="checkbox" role="switch" id="toggleNotificacoes"
-                                checked>
-                            <label class="form-check-label" for="toggleNotificacoes">Receber notificações por
-                                e-mail</label>
+                    <div class="card shadow-sm">
+                        <div class="card-body">
+                             <h2 class="card-title h4 border-bottom pb-2 mb-3">Notificações por E-mail</h2>
+                            <p class="text-muted small mb-3">Controle se você deseja receber e-mails sobre novas propostas e atualizações.</p>
+                            <form id="formNotificacoes">
+                                <div class="form-check form-switch fs-5">
+                                    <input class="form-check-input" type="checkbox" role="switch" id="toggleNotificacoes" checked>
+                                    <label class="form-check-label" for="toggleNotificacoes">Receber notificações</label>
+                                </div>
+                                <button type="button" id="salvarNotificacoes" class="btn btn-success mt-3">Salvar Preferências</button>
+                            </form>
                         </div>
-                        <button type="button" id="salvarNotificacoes" class="btn btn-success mt-3">Salvar
-                            Preferências</button>
-                    </form>
+                    </div>
                 </div>
             </div>
 
-            <!-- PERFIL DIREITA -->
             <div class="col-lg-3">
                 <div class="card shadow-sm p-3 text-center">
                     <img id="perfilIcone" src="imagens/perfilicone.png" alt="Ícone de Perfil" class="perfil-img mb-3">
@@ -129,18 +143,15 @@
         </div>
     </main>
 
-    <!-- FOOTER -->
     <footer class="footer mt-auto">
         <div class="container py-4">
             <div class="row gy-4">
-
                 <div class="col-md-4">
                     <h5 class="text-white">Sobre</h5>
                     <p class="text-muted small">
                         Plataforma para trocar produtos e serviços de forma segura e prática.
                     </p>
                 </div>
-
                 <div class="col-md-4">
                     <h5 class="text-white">Links Úteis</h5>
                     <ul class="list-unstyled">
@@ -151,7 +162,6 @@
                         <li><a href="#">Política de Privacidade</a></li>
                     </ul>
                 </div>
-
                 <div class="col-md-4">
                     <h5 class="text-white">Redes Sociais</h5>
                     <div class="d-flex gap-3">
@@ -161,9 +171,7 @@
                         <a href="#"><i class="bi bi-linkedin"></i></a>
                     </div>
                 </div>
-
             </div>
-
             <div class="footer-bottom text-center pt-3 mt-3 border-top">
                 <small class="text-muted">© 2025 LibertyHive. Todos os direitos reservados.</small>
             </div>
