--- a/src/main/resources/static/contatos.html
+++ b/src/main/resources/static/contatos.html
@@ -3,11 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Chat</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contatos - LibertyHive</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="./Style/contatos.css">
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link rel="stylesheet" href="./Style/chat.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 
 <body>
@@ -26,39 +29,25 @@
                     onclick="window.location.href='configuracao.html'">
                     <i class="bi bi-gear"></i>
                 </button>
-                <button type="button" class="btn btn-outline-dark btn-sm rounded-circle" onclick="logout()"
-                    title="Sair">
+                <button class="btn btn-outline-dark btn-sm rounded-circle" title="Sair" onclick="logout()">
                     <i class="bi bi-box-arrow-right"></i>
                 </button>
             </div>
         </div>
     </header>
-    <div class="chat-container">
-        <div class="chat-header">
-            <div>
-                <h2 id="chatTitle">Chat com <span class="usuario">Polga12</span></h2>
-                <div class="chat-info-fixed">
-                    <p><strong>Participantes:</strong> <span id="participantes"></span></p>
-                    <p><strong>Valor proposto:</strong> <span id="valorProposta"></span></p>
-                </div>
-            </div>
 
-            <div class="actions">
-                <button id="btnBloquear" class="btn btn-warning btn-sm">Bloquear</button>
-                <button id="btnProposta" class="btn btn-warning btn-sm">Informar Valor</button>
-                <button id="btnVoltar" class="btn btn-warning btn-sm">Voltar</button>
-            </div>
+    <main class="container my-5">
+        <div class="d-flex justify-content-between align-items-center mb-4">
+            <h2 class="fw-bold text-dark m-0">Seus Contatos</h2>
+            <button id="btnVoltar" class="btn btn-outline-dark fw-semibold">
+                <i class="bi bi-arrow-left me-1"></i> Voltar
+            </button>
         </div>
 
-        <main id="chatArea">
-            <p>Carregando chat...</p>
-        </main>
-
-        <div class="rodape">
-            <input type="text" id="msgInput" placeholder="Digite sua mensagem..." />
-            <button id="btnEnviar" class="btn btn-warning">Enviar</button>
+        <div id="listaContatos">
         </div>
-    </div>
+    </main>
+
     <footer class="footer pt-5 mt-5">
         <div class="container footer-top d-flex flex-wrap justify-content-between pb-4">
 
@@ -93,9 +82,9 @@
             © 2025 <span class="text-warning fw-semibold">LibertyHive</span>. Todos os direitos reservados.
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="contatos.js"></script>
 
-    <script src="chat.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
