--- a/src/main/resources/static/minhasPropostas.html
+++ b/src/main/resources/static/minhasPropostas.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="./Style/styleMinhasPropostas.css">
@@ -53,6 +54,47 @@
             </div>
         </section>
     </main>
+<div class="modal fade" id="avaliacaoModal" tabindex="-1" aria-labelledby="avaliacaoLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Avaliar <span id="avaliarNome">Usuário</span></h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+      </div>
+      <div class="modal-body text-center">
+        <div id="estrelas" class="mb-3">
+          <i class="bi bi-star star" data-value="1"></i>
+          <i class="bi bi-star star" data-value="2"></i>
+          <i class="bi bi-star star" data-value="3"></i>
+          <i class="bi bi-star star" data-value="4"></i>
+          <i class="bi bi-star star" data-value="5"></i>
+        </div>
+        <div id="avaliacaoTexto" class="text-muted">Selecione uma nota</div>
+      </div>
+      <div class="modal-footer justify-content-center">
+        <button type="button" id="btnEnviarAvaliacao" class="btn btn-success">Enviar Avaliação</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="avisoModal" tabindex="-1" aria-labelledby="avisoLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content border-0 shadow-lg">
+      <div class="modal-header bg-primary text-white">
+        <h5 class="modal-title" id="avisoLabel">Aviso</h5>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Fechar"></button>
+      </div>
+      <div class="modal-body text-center py-4">
+        <i id="avisoIcon" class="bi bi-info-circle fs-1 mb-3 text-primary"></i>
+        <p id="avisoTexto" class="mb-0 fs-5"></p>
+      </div>
+      <div class="modal-footer justify-content-center">
+        <button type="button" class="btn btn-primary px-4" data-bs-dismiss="modal">OK</button>
+      </div>
+    </div>
+  </div>
+</div>
 
     <footer class="footer mt-auto">
         <div class="container py-5">
