--- a/src/main/resources/static/meusItens.html
+++ b/src/main/resources/static/meusItens.html
@@ -65,24 +65,25 @@
           <br><br>
           <div class="radio-group">
             <label for="tipoProduto">Produto</label>
-            <input type="radio" id="tipoProduto" name="tipoItem" value="Produto" checked />
+            <input type="radio" id="tipoProduto" name="tipoItem" value="Produto">
           </div>
 
           <div class="radio-group">
             <label for="tipoServico">Serviço</label>
-            <input type="radio" id="tipoServico" name="tipoItem" value="Serviço" />
+            <input type="radio" id="tipoServico" name="tipoItem" value="Serviço">
           </div>
+
           <br><br>
           <label>É doação/voluntário?</label>
           <br><br>
           <div class="radio-group">
             <label for="doacaoSim">Sim</label>
-            <input type="radio" id="doacaoSim" name="isDoacao" value="1" />
+            <input type="radio" id="doacaoSim" name="isDoacao" value="1">
           </div>
 
           <div class="radio-group">
             <label for="doacaoNao">Não</label>
-            <input type="radio" id="doacaoNao" name="isDoacao" value="0" checked />
+            <input type="radio" id="doacaoNao" name="isDoacao" value="0">
           </div>
           <br><br>
           <label for="categoria">Escolha a categoria do seu novo item:</label>
@@ -345,7 +346,7 @@
           </div>
           <br><br><br><br>
 
-          <label>Insira aqui suas categorias de interesse para seu item (mínimo 1):</label>
+          <label id="labelInteresses">Insira aqui suas categorias de interesse para seu item (mínimo 1):</label>
           <div id="interessesContainer" class="categoria-interesse-container"></div>
           <br><br>
 
