--- a/src/main/resources/static/configuracao.html
+++ b/src/main/resources/static/configuracao.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Configuração - LibertyHive</title>
     <link rel="icon" type="image/png" href="favicon.png" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
@@ -40,6 +41,8 @@
                     <button id="btnMinhaAvaliacao" class="btn btn-opcao"><i class="bi bi-star"></i> Minha
                         Avaliação</button>
                     <button id="btnNotificacoes" class="btn btn-opcao"><i class="bi bi-bell"></i> Notificações</button>
+                    <button id="btnCategorias" class="btn btn-opcao"><i class="bi bi-pie-chart"></i> Relatório
+                        Gráfico</button>
                 </div>
             </div>
 
@@ -69,14 +72,15 @@
                                     <label class="form-label">Data de Nascimento</label>
                                     <input type="date" id="editDataNasc" class="form-control">
                                 </div>
-                                <button type="button" id="salvarPerfil" class="btn btn-success mt-2">Salvar Perfil</button>
+                                <button type="button" id="salvarPerfil" class="btn btn-success mt-2">Salvar
+                                    Perfil</button>
                             </form>
                         </div>
                     </div>
                 </div>
 
                 <div id="painelConta" class="painel" style="display:none;">
-                     <div class="card shadow-sm">
+                    <div class="card shadow-sm">
                         <div class="card-body">
                             <h2 class="card-title h4 border-bottom pb-2 mb-3">Configurações da Conta</h2>
                             <form id="formConta">
@@ -93,7 +97,8 @@
                                     <input type="password" id="contaSenha" class="form-control">
                                     <div class="form-text">Deixe em branco para não alterar.</div>
                                 </div>
-                                <button type="button" id="salvarConta" class="btn btn-success mt-2">Salvar Conta</button>
+                                <button type="button" id="salvarConta" class="btn btn-success mt-2">Salvar
+                                    Conta</button>
                             </form>
                         </div>
                     </div>
@@ -108,10 +113,24 @@
                     <div class="card shadow-sm">
                         <div class="card-body">
                             <h2 class="card-title h4 border-bottom pb-2 mb-3">Minha Reputação</h2>
-                            
-                            <div id="minhaAvaliacaoContainer" class="d-flex justify-content-center align-items-center" style="min-height: 150px;">
-                                </div>
 
+                            <div id="minhaAvaliacaoContainer" class="d-flex justify-content-center align-items-center"
+                                style="min-height: 150px;">
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div id="painelCategorias" class="painel" style="display:none;">
+                    <div class="card shadow-sm">
+                        <div class="card-body">
+                            <h2 class="card-title h4 border-bottom pb-2 mb-3">Distribuição de Categorias (Todas as suas
+                                postagens disponíveis)</h2>
+                            <div class="d-flex justify-content-center mb-3">
+                                <canvas id="chartCategorias" width="300" height="300"></canvas>
+                            </div>
+                            <div id="legendaCategorias" class="text-center small"></div>
+                            <p class="text-muted small mt-3">O gráfico considera todas as postagens que você cadastrou (apenas disponíveis).</p>
                         </div>
                     </div>
                 </div>
@@ -119,14 +138,18 @@
                 <div id="painelNotificacoes" class="painel" style="display:none;">
                     <div class="card shadow-sm">
                         <div class="card-body">
-                             <h2 class="card-title h4 border-bottom pb-2 mb-3">Notificações por E-mail</h2>
-                            <p class="text-muted small mb-3">Controle se você deseja receber e-mails sobre novas propostas e atualizações.</p>
+                            <h2 class="card-title h4 border-bottom pb-2 mb-3">Notificações por E-mail</h2>
+                            <p class="text-muted small mb-3">Controle se você deseja receber e-mails sobre novas
+                                propostas e atualizações.</p>
                             <form id="formNotificacoes">
                                 <div class="form-check form-switch fs-5">
-                                    <input class="form-check-input" type="checkbox" role="switch" id="toggleNotificacoes" checked>
-                                    <label class="form-check-label" for="toggleNotificacoes">Receber notificações</label>
+                                    <input class="form-check-input" type="checkbox" role="switch"
+                                        id="toggleNotificacoes" checked>
+                                    <label class="form-check-label" for="toggleNotificacoes">Receber
+                                        notificações</label>
                                 </div>
-                                <button type="button" id="salvarNotificacoes" class="btn btn-success mt-3">Salvar Preferências</button>
+                                <button type="button" id="salvarNotificacoes" class="btn btn-success mt-3">Salvar
+                                    Preferências</button>
                             </form>
                         </div>
                     </div>
